@@ -1,10 +1,10 @@
-// Absolute Position
+// Position
 //––––––––––––––––––––––––––––––––––––––––––––––––––
 
-@mixin abs-position($top: auto, $right: auto, $bottom: auto, $left: auto) {
+@mixin position($top: auto, $right: auto, $bottom: auto, $left: auto, $position: absolute) {
     top: $top;
     right: $right;
     bottom: $bottom;
     left: $left;
-    position: absolute;
+    position: $position;
 }
