@@ -11,6 +11,10 @@ Changelog
     - .flip-both
 * Fix bug with anchor transition speed using wrong variable
 
+* BREAKING CHANGES
+    - Mixin 'abs-position' renamed to 'position' and has additional optional parameter $position
+        - @mixin position($top: auto, $right: auto, $bottom: auto, $left: auto, $position: absolute)
+
 1.6.2 - 02-Jan-2018
 ~~~~~~~~~~~~~~~~~~~
 
